[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Teste de backend para Inowatt"
authors = ["João Maranhão"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.2"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
